[package]
name = "hello"
version = "0.1.0"
authors = ["zhangjun <zhangyuchi@gmail.com>"]
edition = "2018"

[dependencies]
clap = "~2"
#futures = { version = "=0.3.0-alpha.17", package = "futures-preview", features = ["async-await", "nightly", "compat"] }
futures = { version = "=0.3.13", features = ["async-await", "compat"] }
tokio = { version = "~1", features = ["rt", "rt-multi-thread"] }
#tokio-threadpool = "~0.1"
oldfutures = { version = "=0.1", package = "futures" }
